fix: update extension id

--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
 
   "browser_specific_settings": {
     "gecko": {
-      "id": "aboutlife@woynert.com"
+      "id": "propuzzle@woynert.com"
     }
   }
 }
